Fix avatar height on iOS

--- a/docs/.vuepress/theme/styles/landing.scss
+++ b/docs/.vuepress/theme/styles/landing.scss
@@ -1244,6 +1244,7 @@
     
     img {
       width: 19%;
+      min-height: auto;
       border: 2px solid #fff;
       border-radius: 400px;
       margin: auto;
